# parallel-programming-merge-sort

./: CMakeLists.txt  README.md
include/: merge_sort_cpu.hpp  merge_sort_gpu.hpp  utility.hpp
src/: main.cpp  merge_sort_gpu.cu
